--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
     "drizzle-orm": "^0.38.3",
     "drizzle-zod": "^0.6.1",
     "embla-carousel-react": "^8.3.0",
+    "emoji-picker-react": "^4.12.0",
     "express": "^4.21.2",
     "express-session": "^1.18.1",
     "framer-motion": "^11.13.1",
