--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,5 +1,5 @@
 {
-  "include": ["client/src/**/*", "db/**/*", "server/**/*"],
+  "include": ["client/src/**/*", "db/**/*", "server/**/*", "services/**/*"],
   "exclude": ["node_modules", "build", "dist", "**/*.test.ts"],
   "compilerOptions": {
     "incremental": true,
@@ -18,6 +18,8 @@
     "paths": {
       "@db": ["./db/index.ts"],
       "@db/*": ["./db/*"],
+      "@services": ["./services/index.ts"],
+      "@services/*": ["./services/*"],
       "@/*": ["./client/src/*"]
     }
   }
